--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 	<head>
 		<title>Lalit Sharma</title>
+		<!-- link to the main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+
 	</head>
 	<body>
 		<nav>
