--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:89lalit@gmail.com">email</a></li>
-        		<li><a href="https://github.com/lalitpec">github.com/lalitpec</a></li>
+        		<li><a href="https://github.com/lalitpec">github</a></li>
+			<li><a href="https://www.linkedin.com/in/sharmalalit">linkedin</a></li>
 			</ul>
 		</footer>
 	</body>
