--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:89lalit@gmail.com">email</a></li>
+        		<li><a href="/contact">contact</a></li>
         		<li><a href="https://github.com/lalitpec">github</a></li>
 			<li><a href="https://www.linkedin.com/in/sharmalalit">linkedin</a></li>
 			</ul>
