--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="/contact">contact</a></li>
+        		<li><a href="/contact">contact me</a></li>
         		<li><a href="https://github.com/lalitpec">github</a></li>
 			<li><a href="https://www.linkedin.com/in/sharmalalit">linkedin</a></li>
+			<li><a href="https://twitter.com/lalit_sh">twitter</a></li>
 			</ul>
 		</footer>
 	</body>
