--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     		</ul>
 -->        
 		</nav>
+		<img src="img/lsharma_profile.jpeg" style="vertical-align:middle;width:100px;height:133px;">
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi! My name is Lalit Sharma, and I'm a programmer based in Bangalore</h1>
@@ -23,6 +24,18 @@
         <p>Besides this, I love long distance cycling and mountaineering. I've travelled and hiked across Himalayas and the Western Ghats in India.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
+		<div class="container">
+    		<div class="blurb">
+			<h2 style="text-align: center;">Professional skills</h2>
+			<h3>Software Engineering</h3>
+			<p>I've worked on authentication, performance oriented logging and SSL security, ensuring deliverables on time under aggressive deadlines.</p>
+			<h3>Software Design</h3>
+			<p>I've designed, implemented and maintained ERP solutions for many businesses and Non-profits, providing low-cost and high-availability systems.</p>
+			<h3>Mountaineering</h3>
+			<p>I've cycled across Himalayas on solo bike rides. Covered a good deal with trekking as well. I'm currently writing a travelogue on my journey through Jammu and Kashmir, India.</p>
+    		</div><!-- /.blurb -->
+		</div><!-- /.container -->
+
 		<footer>
     		<ul>
         		<li><a href="/contact">contact me</a></li>
