--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Lalit Sharma</title>
+		<title>Lalit Sharma. Programmer, Digital Publisher, Mountaineer</title>
 		<!-- link to the main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/main.css">
 	</head>
