--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     		<div class="blurb">
         		<h1>Hi! My name is Lalit Sharma, and I'm a programmer based in Bangalore</h1>
 				<p>I believe in creating castles in the air. Some call it programming.</p>
-        <p>After receiving my Bachelor's degree in 2011 from PEC University of Technology, I joined a startup and honed my skills as a full stack developer. I currently run my own shop, developing enterprise software for SMEs and NGOs.</p>
+        <p>After receiving my Bachelor's degree in 2011 from PEC University of Technology, I joined a startup and honed my skills as a full stack developer. 
+		For a year or so, I ran my own shop, developing enterprise software for SMEs and NGOs.
+			I currently work with another startup, involved with autonomous, self-driving vehicles.</p>
         <p>Besides this, I love long distance cycling and mountaineering. I've travelled and hiked across Himalayas and the Western Ghats in India.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
