--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<img src="img/lsharma_profile.jpeg" style="vertical-align:middle;width:100px;height:133px;">
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi! My name is Lalit Sharma, and I'm a programmer based in Hyderabad</h1>
+        		<h1>Hi! My name is Lalit Sharma, and I'm a programmer based in Vancouver</h1>
 				<p>I believe in creating castles in the air. Some call it programming.</p>
         <p>After receiving my Bachelor's degree in 2011 from PEC University of Technology, I joined a startup and honed my skills as a full stack developer. 
 		For a year or so, I ran my own shop, developing enterprise software for SMEs and NGOs.
