--- a/index.html
+++ b/index.html
@@ -1,45 +1,123 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Lalit Sharma. Programmer, Digital Publisher, Mountaineer</title>
-		<!-- link to the main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-<!--    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/About">About</a></li>
-        		<li><a href="/CV">CV</a></li>
-        		<li><a href="/Blog">Blog</a></li>
-    		</ul>
--->        
-		</nav>
-		<img src="img/lsharma_profile.jpeg" style="vertical-align:middle;width:100px;height:133px;">
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi! My name is Lalit Sharma, and I'm a programmer based in Vancouver</h1>
-				<p>I believe in creating castles in the air. Some call it programming.</p>
-        <p>After receiving my Bachelor's degree in 2011 from PEC University of Technology, I joined a startup and honed my skills as a full stack developer. 
-		For a year or so, I ran my own shop, developing enterprise software for SMEs and NGOs.
-			I currently work with another startup, involved with autonomous, self-driving vehicles.</p>
-        <p>Besides this, I love long distance cycling and mountaineering. I've travelled and hiked across Himalayas and the Western Ghats in India.</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<div class="container">
-    		<div class="blurb">
-			<h2 style="text-align: center;">Professional skills</h2>
-			<h3>Software Engineering</h3>
-			<p>I've worked on authentication, performance oriented logging and SSL security, ensuring deliverables on time under aggressive deadlines.</p>
-			<h3>Software Design</h3>
-			<p>I've designed, implemented and maintained ERP solutions for many businesses and Non-profits, providing low-cost and high-availability systems.</p>
-			<h3>Mountaineering</h3>
-			<p>I've cycled across Himalayas on solo bike rides. Covered a good deal with trekking as well. I'm currently writing a travelogue on my journey through Jammu and Kashmir, India.</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Lalit Sharma — Software Engineer • Mountaineer</title>
+    <!-- Inter from Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
+    <meta name="theme-color" content="#111827" />
+  </head>
+  <body>
+    <header class="site-header">
+      <div class="site-container header-inner">
+        <div class="brand">
+          <h1 class="name">Lalit Sharma</h1>
+          <p class="tagline">Programmer • Digital Publisher • Mountaineer — Vancouver</p>
+        </div>
+        <nav class="main-nav" aria-label="Primary">
+          <a href="index.html">Home</a>
+          <a href="index.html#about">About</a>
+          <a href="projects.html">Projects</a>
+          <a href="experience.html">Experience</a>
+          <a href="https://medium.com/@89lalit" target="_blank" rel="noopener">Blog</a>
+          <a href="contact.html">Contact</a>
+        </nav>
+      </div>
+    </header>
 
-		<footer>
+    <main class="site-container">
+      <section class="hero">
+        <img class="avatar" src="img/lsharma_profile.jpeg" alt="Lalit Sharma profile picture">
+        <div class="hero-copy">
+          <h2>Hello — I build reliable software and love long-distance cycling and mountaineering.</h2>
+          <p>
+            I create thoughtful, pragmatic software solutions. After completing my Bachelor's (2011, PEC University of Technology) I worked in startups, ran a small software shop building ERP and enterprise tools for SMEs and NGOs, and currently contribute to autonomy software for self-driving vehicles.
+          </p>
+          <p class="cta-row">
+            <a class="btn" href="https://drive.google.com/uc?export=download&id=1eL_wt5dpwHpOW55ypTCQHnpCuHWIm4kz" target="_blank" rel="noopener">Resume</a>
+            <a class="btn outline" href="https://github.com/lalits" target="_blank" rel="noopener">GitHub</a>
+          </p>
+        </div>
+      </section>
 
-		</footer>
-	</body>
+      <section id="summary" class="card">
+        <h3>Summary</h3>
+        <p>
+          Software engineer with 13 years of professional experience building scalable and resilient distributed systems across cloud, edge, and on-premises environments. Proven ownership of end-to-end system design, deployment automation, and fleet health management with measurable improvements in reliability, efficiency, and compliance. Specialized in AWS infrastructure, orchestration pipelines, and high-performance database systems. Versatile background across industries, from cloud security and content delivery to mapping and ERP platforms.
+        </p>
+      </section>
+
+      <section id="technical-skills" class="card two-col">
+        <div>
+          <h4>Languages & Frameworks</h4>
+          <ul>
+            <li>Java, Python, C++, Node.js</li>
+            <li>React, Angular</li>
+            <li>AWS CDK</li>
+          </ul>
+
+          <h4>AWS Services</h4>
+          <ul>
+            <li>Lambda, DynamoDB, SNS, SQS, Step Functions</li>
+            <li>CloudFormation, CloudWatch</li>
+          </ul>
+        </div>
+        <div>
+          <h4>Databases & Tools</h4>
+          <ul>
+            <li>Postgres, MongoDB, Redis, Amazon DynamoDB, JournalDB</li>
+            <li>Odoo, Splunk, Kubernetes, Airflow</li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Experience moved to a dedicated page (experience.html) -->
+
+      <section id="skills" class="card two-col">
+        <div>
+          <h4>Engineering</h4>
+          <ul>
+            <li>Backend systems, APIs</li>
+            <li>Authentication, security</li>
+            <li>Performance & observability</li>
+          </ul>
+        </div>
+        <div>
+          <h4>Other</h4>
+          <ul>
+            <li>Software design</li>
+            <li>Technical writing & publishing</li>
+            <li>Mountaineering & expedition planning</li>
+          </ul>
+        </div>
+      </section>
+    </main>
+
+    <footer class="site-footer">
+      <div class="site-container">
+        <small>© <span id="site-year"></span> Lalit Sharma — Built with simple HTML & CSS</small>
+      </div>
+    </footer>
+
+    <script>
+      // Smooth scroll will work for same-page anchors; CSS also includes native smooth-behavior.
+      document.addEventListener('click', function(e){
+        var t = e.target;
+        if(t.tagName === 'A' && t.getAttribute('href') && t.getAttribute('href').startsWith('#')){
+          e.preventDefault();
+          var id = t.getAttribute('href').slice(1);
+          var el = document.getElementById(id);
+          if(el) el.scrollIntoView({behavior:'smooth',block:'start'});
+        }
+      });
+
+      // populate current year in footer
+      (function(){
+        var y = document.getElementById('site-year');
+        if(y) y.textContent = new Date().getFullYear();
+      })();
+    </script>
+  </body>
 </html>
