update the intro

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
       <section class="hero">
         <img class="avatar" src="img/lsharma_profile.jpeg" alt="Lalit Sharma profile picture">
         <div class="hero-copy">
-          <h2>Hello — I build reliable software and love long-distance cycling and mountaineering.</h2>
+          <h2>Hi! My name is Lalit Sharma. I'm a Software Engineer based in Vancouver</h2>
           <p>
-            I create thoughtful, pragmatic software solutions. After completing my Bachelor's (2011, PEC University of Technology) I worked in startups, ran a small software shop building ERP and enterprise tools for SMEs and NGOs, and currently contribute to autonomy software for self-driving vehicles.
+            With over 13 years of experience spanning startups and global platforms, I specialize in backend development, cloud infrastructure, and large-scale system reliability. Currently at Amazon Web Services, I work on edge computing platforms that power high-availability services worldwide. Outside of work, I enjoy long-distance cycling and mountaineering
           </p>
           <p class="cta-row">
             <a class="btn" href="https://drive.google.com/uc?export=download&id=1eL_wt5dpwHpOW55ypTCQHnpCuHWIm4kz" target="_blank" rel="noopener">Resume</a>
