add the favicon

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Lalit Sharma — Software Engineer • Mountaineer</title>
+	<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon.png">
+	<link rel="apple-touch-icon" href="/img/favicon.png">
+    <title>🧑‍💻☕️ Lalit Sharma • Software Engineer • Mountaineer</title>
     <!-- Inter from Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
@@ -14,7 +16,7 @@
       <div class="site-container header-inner">
         <div class="brand">
           <h1 class="name">Lalit Sharma</h1>
-          <p class="tagline">Programmer • Digital Publisher • Mountaineer — Vancouver</p>
+          <p class="tagline">Software Engineer • Digital Publisher • Mountaineer — Vancouver</p>
         </div>
         <nav class="main-nav" aria-label="Primary">
           <a href="index.html">Home</a>
